--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap-icons": "^1.5.0",
     "braintree-web-drop-in-react": "^1.2.1",
     "moment": "^2.29.1",
+    "nodemon": "^2.0.15",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.6",
     "react-bootstrap-table": "^4.3.1",
